--- a/develop/2016-12-01-irio-anomalies-in-meal-prices.ipynb
+++ b/develop/2016-12-01-irio-anomalies-in-meal-prices.ipynb
@@ -2249,6 +2249,304 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Clustering for find the best group for a new restaurant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18013, 228)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "companies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cnpj_cpf</th>\n",
+       "      <th>supplier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58153</th>\n",
+       "      <td>08706969000194</td>\n",
+       "      <td>BAR E RESTAURANTE PINHEIRO LTDA.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166843</th>\n",
+       "      <td>07920525000194</td>\n",
+       "      <td>CHURRASCARIA GAUCHA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128664</th>\n",
+       "      <td>08519192000159</td>\n",
+       "      <td>A. R. T. DE DIVITIIS - ME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128734</th>\n",
+       "      <td>42591651056874</td>\n",
+       "      <td>ARCOS DOURADOS COM. DE ALIMENTOS LTDA.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160612</th>\n",
+       "      <td>00620393000136</td>\n",
+       "      <td>SANTANA &amp; CUSTODIO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              cnpj_cpf                                supplier\n",
+       "58153   08706969000194        BAR E RESTAURANTE PINHEIRO LTDA.\n",
+       "166843  07920525000194                     CHURRASCARIA GAUCHA\n",
+       "128664  08519192000159              A. R. T. DE DIVITIIS - ME \n",
+       "128734  42591651056874  ARCOS DOURADOS COM. DE ALIMENTOS LTDA.\n",
+       "160612  00620393000136                      SANTANA & CUSTODIO"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnpjs = dataset.sort_values('issue_date') \\\n",
+    "    .loc[dataset['cnpj_cpf'].str.len() == 14,\n",
+    "         ['cnpj_cpf', 'supplier']] \\\n",
+    "    .drop_duplicates('cnpj_cpf', keep='last')\n",
+    "cnpjs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.DataFrameGroupBy object at 0x137b980b8>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.loc[dataset['cnpj_cpf'].str.len() == 14].groupby('cnpj')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year                                         2009\n",
+       "applicant_id                                 1309\n",
+       "document_id                               1689682\n",
+       "reimbursement_value_total                     NaN\n",
+       "total_net_value                              5852\n",
+       "reimbursement_numbers                        3087\n",
+       "congressperson_name               MANOEL SALVIANO\n",
+       "congressperson_id                           74456\n",
+       "congressperson_document                       104\n",
+       "term                                         2011\n",
+       "state                                          CE\n",
+       "party                                         PSD\n",
+       "term_id                                        54\n",
+       "subquota_number                                13\n",
+       "subquota_description          Congressperson meal\n",
+       "subquota_group_id                               0\n",
+       "subquota_group_description                    NaN\n",
+       "supplier                       HOTEL NACIONAL S/A\n",
+       "cnpj_cpf                           72629140000134\n",
+       "document_number                            779509\n",
+       "document_type                                   0\n",
+       "issue_date                    2009-09-01 00:00:00\n",
+       "document_value                               5852\n",
+       "remark_value                                    0\n",
+       "net_values                                   5852\n",
+       "month                                           8\n",
+       "installment                                     0\n",
+       "passenger                                     NaN\n",
+       "leg_of_the_trip                               NaN\n",
+       "batch_number                               428099\n",
+       "                                     ...         \n",
+       "secondary_activity_89                         NaN\n",
+       "secondary_activity_89_code                    NaN\n",
+       "secondary_activity_8_code                     NaN\n",
+       "secondary_activity_9                          NaN\n",
+       "secondary_activity_90                         NaN\n",
+       "secondary_activity_90_code                    NaN\n",
+       "secondary_activity_91                         NaN\n",
+       "secondary_activity_91_code                    NaN\n",
+       "secondary_activity_92                         NaN\n",
+       "secondary_activity_92_code                    NaN\n",
+       "secondary_activity_93                         NaN\n",
+       "secondary_activity_93_code                    NaN\n",
+       "secondary_activity_94                         NaN\n",
+       "secondary_activity_94_code                    NaN\n",
+       "secondary_activity_95                         NaN\n",
+       "secondary_activity_95_code                    NaN\n",
+       "secondary_activity_96                         NaN\n",
+       "secondary_activity_96_code                    NaN\n",
+       "secondary_activity_97                         NaN\n",
+       "secondary_activity_97_code                    NaN\n",
+       "secondary_activity_98                         NaN\n",
+       "secondary_activity_98_code                    NaN\n",
+       "secondary_activity_99                         NaN\n",
+       "secondary_activity_99_code                    NaN\n",
+       "secondary_activity_9_code                     NaN\n",
+       "latitude                                 -15.8045\n",
+       "longitude                                -47.8949\n",
+       "latitude.1                               -15.8045\n",
+       "longitude.1                              -47.8949\n",
+       "supplier_keyword                            hotel\n",
+       "Name: 23296, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_cnpj = (dataset['cnpj_cpf'].str.len() != 14) & \\\n",
+    "    dataset['cnpj_cpf'].notnull() & \\\n",
+    "    dataset['document_type'] != 2\n",
+    "dataset.loc[is_cnpj] \\\n",
+    "    .sort_values('total_net_value', ascending=False).iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dataset['cnpj_cpf'] = dataset['cnpj_cpf'].astype(np.str).replace('nan', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cnpj_cpf_list = dataset[['cnpj_cpf']].drop_duplicates()\n",
+    "cnpj_cpf_list['cnpj_cpf'] = cnpj_cpf_list['cnpj_cpf'].astype(np.str) \\\n",
+    "    .replace('nan', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from math import isnan\n",
+    "from pycpfcnpj import cpfcnpj\n",
+    "\n",
+    "def validate_cnpj_cpf(cnpj_or_cpf):\n",
+    "    (cnpj_or_cpf == None) | cpfcnpj.validate(cnpj_or_cpf)\n",
+    "\n",
+    "\n",
+    "\n",
+    "cnpj_cpf_list['valid_cnpj_cpf'] = \\\n",
+    "    np.vectorize(cpfcnpj.validate)(cnpj_cpf_list['cnpj_cpf'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cnpj_cpf</th>\n",
+       "      <th>valid_cnpj_cpf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>53466</th>\n",
+       "      <td>11111111111</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          cnpj_cpf valid_cnpj_cpf\n",
+       "53466  11111111111          False"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnpj_cpf_list[~cnpj_cpf_list['valid_cnpj_cpf']]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
